fix: Update environment configuration files with correct ports and comprehensive settings
🔧 Fixed Critical Environment Issues:
- Updated API port from 8000 to 3001 in all configs
- Added missing EMBEDDING_SERVICE_URL configurations
- Fixed service URL mismatches between components

✅ Enhanced Environment Templates:
- Comprehensive API server configuration with all required variables
- Complete frontend environment with proper service URLs
- Detailed AI service configuration with performance settings
- Added security, monitoring, and development options

📋 New Environment Setup Guide:
- Step-by-step setup instructions for all services
- Database setup with Neon PostgreSQL
- API key configuration for Google Places and MapTiler
- Security best practices and troubleshooting

🎯 Ready for Production:
- Professional environment templates with comments
- Clear instructions for required vs optional settings
- Proper port configurations matching architecture
- Security-first approach with generated secrets

This fixes the environment configuration issues that would cause
service connection failures and ensures smooth setup for new developers.

--- a/property-embedding-service/.env.example
+++ b/property-embedding-service/.env.example
@@ -1,4 +1,151 @@
-# Embedding Service Environment Variables
+# ========================================
+# 🤖 PropertySearch UK - AI Service Config
+# ========================================
+
+# ========================================
+# 🚀 Application Settings
+# ========================================
+# FastAPI server configuration
+API_HOST=0.0.0.0
+API_PORT=8001
+API_RELOAD=true
+
+# Environment mode
+ENVIRONMENT=development
+
+# ========================================
+# 🧠 AI Model Configuration
+# ========================================
+# Sentence transformer model for embeddings
+MODEL_NAME=all-MiniLM-L6-v2
+# Alternative models:
+# MODEL_NAME=all-mpnet-base-v2  # Better quality, slower
+# MODEL_NAME=paraphrase-multilingual-MiniLM-L12-v2  # Multilingual
+
+# Model cache directory
+MODEL_CACHE_DIR=./model_cache
+CACHE_DIR=./model_cache
+
+# Model download settings
+HF_HOME=./huggingface_cache
+TRANSFORMERS_CACHE=./transformers_cache
+
+# ========================================
+# 📊 Performance Settings  
+# ========================================
+# Batch processing settings
+MAX_BATCH_SIZE=32
+DEFAULT_BATCH_SIZE=16
+
+# CPU/GPU settings
+DEVICE=cpu
+# Set to 'cuda' if you have GPU available
+# DEVICE=cuda
+
+# Number of threads for CPU processing
+NUM_THREADS=4
+
+# Memory settings
+MAX_MEMORY_MB=2048
+
+# ========================================
+# 📦 Cache Configuration
+# ========================================
+# Redis for caching embeddings and results
 REDIS_URL=redis://localhost:6379
+# Alternative Redis providers:
+# REDIS_URL=redis://default:password@redis-12345.upstash.io:12345
+
+# Cache settings
+CACHE_ENABLED=true
+CACHE_TTL=3600
+EMBEDDING_CACHE_TTL=86400
+
+# ========================================
+# 🔗 API Integration
+# ========================================
+# Backend API URL for data fetching
+API_BASE_URL=http://localhost:3001
+
+# API timeouts (seconds)
+API_TIMEOUT=30
+REQUEST_TIMEOUT=60
+
+# ========================================
+# 📝 Logging Configuration
+# ========================================
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
-MODEL_CACHE_DIR=./models
+
+# Log file settings
+LOG_FILE=./logs/ai_service.log
+LOG_MAX_SIZE=10485760
+LOG_BACKUP_COUNT=5
+
+# Enable detailed logging
+VERBOSE_LOGGING=false
+LOG_REQUESTS=true
+
+# ========================================
+# 🔒 Security Settings
+# ========================================
+# API key for service authentication (optional)
+API_KEY=your_ai_service_api_key
+
+# CORS settings
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
+CORS_HEADERS=*
+
+# Rate limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_CALLS=100
+RATE_LIMIT_PERIOD=60
+
+# ========================================
+# 🎯 Search Configuration
+# ========================================
+# Similarity search settings
+SIMILARITY_THRESHOLD=0.7
+MAX_SEARCH_RESULTS=50
+DEFAULT_SEARCH_LIMIT=10
+
+# Search result scoring
+BOOST_RECENT_PROPERTIES=1.1
+BOOST_VERIFIED_PROPERTIES=1.05
+
+# Text preprocessing
+ENABLE_SPELL_CHECK=false
+ENABLE_AUTOCOMPLETE=true
+
+# ========================================
+# 📊 Monitoring & Health Checks
+# ========================================
+# Health check settings
+HEALTH_CHECK_ENABLED=true
+HEALTH_CHECK_INTERVAL=300
+
+# Metrics collection
+METRICS_ENABLED=true
+METRICS_PORT=9090
+
+# Performance monitoring
+TRACK_RESPONSE_TIMES=true
+TRACK_MODEL_PERFORMANCE=true
+
+# ========================================
+# 🔧 Development Settings
+# ========================================
+# Debug mode (enables additional logging and features)
+DEBUG=false
+
+# Model warming (preload model on startup)
+WARM_UP_MODEL=true
+
+# Development features
+ENABLE_MODEL_INFO_ENDPOINT=true
+ENABLE_DEBUG_ENDPOINTS=false
+
+# Testing settings
+TEST_MODE=false
+MOCK_RESPONSES=false
