--- a/property-search-api/.env.example
+++ b/property-search-api/.env.example
@@ -1,41 +1,116 @@
-# API Environment Variables
+# ========================================
+# 🔌 PropertySearch UK - API Server Config
+# ========================================
+
+# Application Environment
 NODE_ENV=development
-PORT=8000
+PORT=3001
 
-# Database
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/property_search
+# ========================================
+# 🗄️ Database Configuration
+# ========================================
+# Get your Neon PostgreSQL connection string from: https://neon.tech/
+DATABASE_URL=postgresql://username:password@ep-example-123456.us-east-1.aws.neon.tech/property_search?sslmode=require
 
-# Redis
+# Optional: Database connection pool settings
+DB_POOL_MIN=2
+DB_POOL_MAX=10
+
+# ========================================
+# 📦 Cache Configuration
+# ========================================
+# Redis for caching and sessions (optional but recommended)
 REDIS_URL=redis://localhost:6379
+# Alternative Redis providers:
+# REDIS_URL=redis://default:password@redis-12345.upstash.io:12345
+# REDIS_URL=redis://username:password@redis-host:6379
 
-# Services
-EMBEDDING_SERVICE_URL=http://localhost:8001
+# ========================================
+# 🔗 Service URLs
+# ========================================
 FRONTEND_URL=http://localhost:3000
+EMBEDDING_SERVICE_URL=http://localhost:8001
 
-# Authentication
-JWT_SECRET=your_jwt_secret_key_here
+# ========================================
+# 🔐 Authentication & Security
+# ========================================
+# Generate a secure JWT secret: openssl rand -base64 32
+JWT_SECRET=your_super_secure_jwt_secret_key_here_please_change_this
 JWT_EXPIRES_IN=7d
 
-# External APIs
-GOOGLE_PLACES_API_KEY=your_google_places_key
-MAPTILER_API_KEY=your_maptiler_key
-WHATSAPP_ACCESS_TOKEN=your_whatsapp_token
-WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000
 
-# Email
+# ========================================
+# 🗺️ External API Keys
+# ========================================
+# Google Places API (for location search)
+# Get key from: https://console.cloud.google.com/apis/credentials
+GOOGLE_PLACES_API_KEY=your_google_places_api_key
+
+# MapTiler API (for maps)
+# Get key from: https://www.maptiler.com/
+MAPTILER_API_KEY=your_maptiler_api_key
+
+# ========================================
+# 📧 Email Configuration (Optional)
+# ========================================
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
+SMTP_SECURE=false
 SMTP_USER=your_email@gmail.com
 SMTP_PASS=your_app_password
 
-# File Upload
+# Email templates
+FROM_EMAIL=noreply@propertysearch.uk
+FROM_NAME=PropertySearch UK
+
+# ========================================
+# 📱 WhatsApp Integration (Optional)
+# ========================================
+WHATSAPP_ACCESS_TOKEN=your_whatsapp_access_token
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
+WHATSAPP_VERIFY_TOKEN=your_verify_token
+
+# ========================================
+# 🖼️ File Upload Configuration (Optional)
+# ========================================
+# Cloudinary for image uploads
 CLOUDINARY_CLOUD_NAME=your_cloudinary_name
 CLOUDINARY_API_KEY=your_cloudinary_key
 CLOUDINARY_API_SECRET=your_cloudinary_secret
 
-# Payments
-STRIPE_SECRET_KEY=your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+# Local file upload path (if not using Cloudinary)
+UPLOAD_PATH=./uploads
+MAX_FILE_SIZE=10485760
 
-# Monitoring
+# ========================================
+# 💳 Payment Processing (Optional)
+# ========================================
+# Stripe for subscriptions and payments
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret
+
+# ========================================
+# 📊 Monitoring & Analytics (Optional)
+# ========================================
+# Sentry for error tracking
 SENTRY_DSN=your_sentry_dsn
+
+# Application Insights or similar
+ANALYTICS_API_KEY=your_analytics_key
+
+# ========================================
+# 🚀 Development & Production Settings
+# ========================================
+# API Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Logging
+LOG_LEVEL=info
+LOG_FILE=./logs/app.log
+
+# Health Check
+HEALTH_CHECK_ENABLED=true
