--- a/property-search-frontend/.env.local.example
+++ b/property-search-frontend/.env.local.example
@@ -1,11 +1,105 @@
-# Frontend Environment Variables
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# ========================================
+# 🌐 PropertySearch UK - Frontend Config
+# ========================================
+
+# ========================================
+# 🔗 API & Services
+# ========================================
+# Backend API URL (matches API server port)
+NEXT_PUBLIC_API_URL=http://localhost:3001
+
+# AI Embedding Service URL
+NEXT_PUBLIC_EMBEDDING_SERVICE_URL=http://localhost:8001
+
+# ========================================
+# 🗺️ Maps & Location Services
+# ========================================
+# MapTiler API Key for maps
+# Get your key from: https://www.maptiler.com/
 NEXT_PUBLIC_MAPTILER_KEY=your_maptiler_api_key
-NEXT_PUBLIC_GOOGLE_PLACES_KEY=your_google_places_key
 
-# NextAuth
+# Google Places API Key for location search
+# Get your key from: https://console.cloud.google.com/apis/credentials
+NEXT_PUBLIC_GOOGLE_PLACES_KEY=your_google_places_api_key
+
+# ========================================
+# 🔐 Authentication
+# ========================================
+# NextAuth.js configuration
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your_nextauth_secret
+# Generate secret: openssl rand -base64 32
+NEXTAUTH_SECRET=your_super_secure_nextauth_secret_please_change_this
 
-# Analytics (optional)
-NEXT_PUBLIC_GA_ID=your_google_analytics_id
+# OAuth Providers (Optional)
+GOOGLE_CLIENT_ID=your_google_oauth_client_id
+GOOGLE_CLIENT_SECRET=your_google_oauth_client_secret
+
+FACEBOOK_CLIENT_ID=your_facebook_app_id
+FACEBOOK_CLIENT_SECRET=your_facebook_app_secret
+
+# ========================================
+# 💳 Payment Integration
+# ========================================
+# Stripe Publishable Key (for payments)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+
+# ========================================
+# 📊 Analytics & Monitoring
+# ========================================
+# Google Analytics 4
+NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+
+# Google Tag Manager (Optional)
+NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
+
+# Microsoft Clarity (Optional)
+NEXT_PUBLIC_CLARITY_PROJECT_ID=your_clarity_project_id
+
+# ========================================
+# 🎨 UI & UX Configuration
+# ========================================
+# Theme and branding
+NEXT_PUBLIC_SITE_NAME=PropertySearch UK
+NEXT_PUBLIC_SITE_DESCRIPTION=AI-powered property search for the UK market
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Feature flags
+NEXT_PUBLIC_ENABLE_CHAT=true
+NEXT_PUBLIC_ENABLE_WHATSAPP=false
+NEXT_PUBLIC_ENABLE_NOTIFICATIONS=true
+
+# ========================================
+# 📱 Progressive Web App (PWA)
+# ========================================
+NEXT_PUBLIC_PWA_ENABLED=true
+NEXT_PUBLIC_MANIFEST_NAME=PropertySearch UK
+NEXT_PUBLIC_MANIFEST_SHORT_NAME=PropertySearch
+
+# ========================================
+# 🔧 Development Settings
+# ========================================
+# Enable development features
+NEXT_PUBLIC_DEV_MODE=true
+NEXT_PUBLIC_SHOW_DEBUG_INFO=false
+
+# API timeouts (milliseconds)
+NEXT_PUBLIC_API_TIMEOUT=30000
+NEXT_PUBLIC_SEARCH_TIMEOUT=15000
+
+# ========================================
+# 🚀 Performance & SEO
+# ========================================
+# Image optimization
+NEXT_PUBLIC_IMAGE_QUALITY=75
+NEXT_PUBLIC_IMAGE_SIZES=640,768,1024,1280,1600
+
+# Cache configuration
+NEXT_PUBLIC_CACHE_ENABLED=true
+NEXT_PUBLIC_CACHE_TTL=300
+
+# ========================================
+# 📧 Contact & Support
+# ========================================
+NEXT_PUBLIC_CONTACT_EMAIL=hello@propertysearch.uk
+NEXT_PUBLIC_SUPPORT_EMAIL=support@propertysearch.uk
+NEXT_PUBLIC_CONTACT_PHONE=+44 20 1234 5678
