--- a/package.json
+++ b/package.json
@@ -47,12 +47,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
+    "postcss": "^8.5.6",
     "prettier": "^3.0.3",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.0.0"
   },
   "workspaces": [
