--- a/property-search-frontend/package.json
+++ b/property-search-frontend/package.json
@@ -27,6 +27,7 @@
     "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.0"
   },
   "devDependencies": {
