--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,64 +2,130 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
+    container_name: moov-postgres
     environment:
-      POSTGRES_DB: property_search
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: ${POSTGRES_USER:-moov}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-moov123}
+      POSTGRES_DB: ${POSTGRES_DB:-moov_db}
+      POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=en_US.UTF-8"
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./property-search-api/migrations:/docker-entrypoint-initdb.d
+      - ./logs/postgres:/var/log/postgresql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-moov} -d ${POSTGRES_DB:-moov_db}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+    networks:
+      - moov-network
 
   redis:
     image: redis:7-alpine
+    container_name: moov-redis
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
+      - ./redis.conf:/etc/redis/redis.conf
+    command: ["redis-server", "/etc/redis/redis.conf"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+    networks:
+      - moov-network
 
   api:
-    build: ./property-search-api
+    build: 
+      context: ./property-search-api
+      dockerfile: Dockerfile
+    container_name: moov-api
     ports:
       - "8000:8000"
     environment:
-      - NODE_ENV=development
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/property_search
+      - NODE_ENV=${NODE_ENV:-development}
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-moov}:${POSTGRES_PASSWORD:-moov123}@postgres:5432/${POSTGRES_DB:-moov_db}
       - REDIS_URL=redis://redis:6379
       - EMBEDDING_SERVICE_URL=http://embedding-service:8001
+      - JWT_SECRET=${JWT_SECRET:-dev_jwt_secret_fallback_12345678901234567890}
+      - FRONTEND_URL=http://localhost:3000
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - ./property-search-api:/app
       - /app/node_modules
+      - ./logs/api:/app/logs
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+    networks:
+      - moov-network
 
   embedding-service:
-    build: ./property-embedding-service
+    build:
+      context: ./property-embedding-service
+      dockerfile: Dockerfile
+    container_name: moov-embedding
     ports:
       - "8001:8001"
     environment:
       - REDIS_URL=redis://redis:6379
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
     volumes:
       - ./property-embedding-service:/app
+      - ./logs/embedding:/app/logs
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+    networks:
+      - moov-network
 
   frontend:
-    build: ./property-search-frontend
+    build:
+      context: ./property-search-frontend
+      dockerfile: Dockerfile
+    container_name: moov-frontend
     ports:
       - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000
-      - NEXT_PUBLIC_MAPTILER_KEY=your_maptiler_key
+      - NEXT_PUBLIC_EMBEDDING_SERVICE_URL=http://localhost:8001
+      - NEXT_PUBLIC_MAPTILER_KEY=${MAPTILER_API_KEY}
     depends_on:
-      - api
+      api:
+        condition: service_healthy
     volumes:
       - ./property-search-frontend:/app
       - /app/node_modules
+      - /app/.next
+    restart: unless-stopped
+    networks:
+      - moov-network
+
+networks:
+  moov-network:
+    driver: bridge
 
 volumes:
   postgres_data:
+    driver: local
   redis_data:
+    driver: local
