--- a/property-search-api/package.json
+++ b/property-search-api/package.json
@@ -21,10 +21,13 @@
     "express": "^4.18.0",
     "express-rate-limit": "^7.1.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
     "pg": "^8.11.0",
+    "rate-limit-redis": "^4.2.0",
     "redis": "^4.6.0",
     "socket.io": "^4.7.0",
     "stripe": "^14.0.0",
@@ -38,6 +41,7 @@
     "@types/express": "^4.17.0",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.0",
+    "@types/morgan": "^1.9.0",
     "@types/multer": "^1.4.0",
     "@types/node": "^20.0.0",
     "@types/nodemailer": "^6.4.0",
@@ -46,6 +50,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.7.0",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   }
