--- a/property-search-frontend/package.json
+++ b/property-search-frontend/package.json
@@ -28,6 +28,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "framer-motion": "^10.16.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
