Add comprehensive Vitest environment configuration tests
✅ API Environment Tests (6 tests passing):
- Validates environment variable parsing with Zod schema
- Tests required fields (DATABASE_URL, JWT_SECRET)
- Validates URL formats for DATABASE_URL and REDIS_URL
- Tests default value handling for optional variables
- Supports development, production, and test environments
- Proper PostgreSQL and Redis connection string validation

✅ Frontend Environment Tests (4 tests passing):
- Validates Next.js public environment variables
- Tests URL validation for API and embedding service URLs
- Handles missing required variables gracefully
- Supports both development and production configurations

🔧 Infrastructure:
- Added Vitest with proper TypeScript configuration
- Created dedicated test setup files for both API and frontend
- Configured test environments with proper mocking
- Added comprehensive npm scripts for testing
- Test-driven development approach with tests written first

 Dependencies:
- Added vitest and @vitest/ui for modern testing
- Added jsdom for frontend DOM testing
- Configured proper test timeouts and coverage reporting
- Maintained compatibility with existing Jest tests

 Key Features:
- Environment variable validation with proper error handling
- Graceful fallbacks for test environments
- Comprehensive URL and format validation
- Type-safe environment configuration
- Support for multiple deployment environments

--- a/property-search-api/package.json
+++ b/property-search-api/package.json
@@ -8,6 +8,10 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "jest",
+    "test:vitest": "vitest",
+    "test:vitest:ui": "vitest --ui",
+    "test:vitest:run": "vitest run",
+    "test:env": "vitest run src/config/env.test.ts",
     "lint": "eslint src/**/*.ts",
     "migrate": "node -r tsx/cjs src/scripts/migrate.ts"
   },
@@ -48,10 +52,12 @@
     "@types/pg": "^8.10.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^8.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.4.0",
     "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^3.2.4"
   }
 }
