--- a/property-search-frontend/package.json
+++ b/property-search-frontend/package.json
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:env": "vitest run src/lib/env.test.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
@@ -15,6 +19,7 @@
     "autoprefixer": "^10.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.0",
     "lucide-react": "^0.292.0",
     "maplibre-gl": "^3.6.0",
     "next": "^15.3.4",
@@ -28,7 +33,6 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "framer-motion": "^10.16.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
@@ -37,8 +41,11 @@
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "typescript": "^5.0.0"
+    "jsdom": "^26.1.0",
+    "typescript": "^5.0.0",
+    "vitest": "^3.2.4"
   }
 }
