--- a/property-search-api/package.json
+++ b/property-search-api/package.json
@@ -7,10 +7,10 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest",
-    "test:vitest": "vitest",
-    "test:vitest:ui": "vitest --ui",
-    "test:vitest:run": "vitest run",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
     "test:env": "vitest run src/config/env.test.ts",
     "lint": "eslint src/**/*.ts",
     "migrate": "node -r tsx/cjs src/scripts/migrate.ts"
@@ -52,6 +52,7 @@
     "@types/pg": "^8.10.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint": "^8.0.0",
     "jest": "^29.7.0",
