--- a/property-search-api/package.json
+++ b/property-search-api/package.json
@@ -16,7 +16,7 @@
     "migrate": "node -r tsx/cjs src/scripts/migrate.ts"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "compression": "^1.7.4",
@@ -39,6 +39,7 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@testcontainers/postgresql": "^11.0.3",
     "@types/bcryptjs": "^2.4.0",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.0",
@@ -47,6 +48,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/morgan": "^1.9.0",
     "@types/multer": "^1.4.0",
+    "@types/nock": "^10.0.3",
     "@types/node": "^20.0.0",
     "@types/nodemailer": "^6.4.0",
     "@types/pg": "^8.10.0",
@@ -56,6 +58,7 @@
     "@vitest/ui": "^3.2.4",
     "eslint": "^8.0.0",
     "jest": "^29.7.0",
+    "nock": "^14.0.5",
     "ts-jest": "^29.4.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0",
