--- a/property-search-frontend/package.json
+++ b/property-search-frontend/package.json
@@ -18,11 +18,13 @@
     "@hookform/resolvers": "^3.3.0",
     "@tanstack/react-query": "^5.81.0",
     "autoprefixer": "^10.4.0",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "framer-motion": "^10.16.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.292.0",
     "maplibre-gl": "^3.6.0",
+    "msw": "^2.10.2",
     "next": "^15.3.4",
     "next-auth": "^4.24.0",
     "postcss": "^8.4.0",
@@ -40,7 +42,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.19.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
