--- a/property-search-api/package.json
+++ b/property-search-api/package.json
@@ -23,20 +23,20 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.0",
-    "express-rate-limit": "^7.1.0",
+    "express-rate-limit": "^7.5.1",
     "helmet": "^7.1.0",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
     "pg": "^8.11.0",
-    "rate-limit-redis": "^4.2.0",
+    "rate-limit-redis": "^4.2.1",
     "redis": "^4.6.0",
     "socket.io": "^4.7.0",
     "stripe": "^14.0.0",
     "winston": "^3.11.0",
-    "zod": "^3.22.0"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@testcontainers/postgresql": "^11.0.3",
@@ -52,6 +52,7 @@
     "@types/node": "^20.0.0",
     "@types/nodemailer": "^6.4.0",
     "@types/pg": "^8.10.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitest/coverage-v8": "^3.2.4",
@@ -59,6 +60,7 @@
     "eslint": "^8.0.0",
     "jest": "^29.7.0",
     "nock": "^14.0.5",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0",
