feat: Major platform enhancements and TDD implementation
- Enhanced property embedding service with caching and performance optimization
- Added comprehensive test suites and TDD integration tests
- Implemented chatbot service with semantic search capabilities
- Added POI (Points of Interest) service and relevance scoring
- Enhanced frontend API client with improved error handling
- Added comprehensive documentation and deployment guides
- Implemented monitoring and analytics capabilities
- Added production deployment configurations and checklists
- Enhanced type definitions and validation across all services
- Added performance benchmarking and testing utilities

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "workspaces": [
     "property-search-api",
-    "property-search-frontend"
+    "property-search-frontend",
+    "property-search-types"
   ]
 }
