--- a/property-embedding-service/requirements.txt
+++ b/property-embedding-service/requirements.txt
@@ -9,3 +9,13 @@ transformers>=4.35.0
 scikit-learn>=1.3.2
 prometheus-client>=0.19.0
 python-multipart>=0.0.6
+
+# Enhanced caching dependencies
+xxhash>=3.4.1
+python-dotenv>=1.0.0
+
+# Testing dependencies
+pytest>=7.4.3
+pytest-asyncio>=0.21.1
+pytest-mock>=3.12.0
+httpx>=0.25.0
