--- a/property-search-frontend/tsconfig.json
+++ b/property-search-frontend/tsconfig.json
@@ -20,6 +20,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@shared/types": [
+        "../property-search-types/src/index"
       ]
     },
     "plugins": [
