feat: Complete TDD implementation with comprehensive features
- Add semantic search and chatbot functionality
- Implement real-time monitoring and analytics
- Add mobile accessibility features
- Create admin panel with payment security
- Add validation schemas and i18n support
- Include performance optimization and testing
- Add comprehensive documentation and TDD summaries

--- a/package.json
+++ b/package.json
@@ -13,11 +13,32 @@
     "build:all": "cd property-search-api && npm run build && cd ../property-search-frontend && npm run build",
     "build:frontend": "cd property-search-frontend && npm run build",
     "build:api": "cd property-search-api && npm run build",
-    "test": "npm run test:frontend && npm run test:api && npm run test:ai",
+    "test": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:unit": "npm run test:frontend:unit && npm run test:api:unit",
+    "test:integration": "npm run test:api:integration",
+    "test:e2e": "npm run test:frontend:e2e",
+    "test:coverage": "npm run test:frontend:coverage && npm run test:api:coverage",
+    "test:watch": "concurrently \"npm run test:frontend:watch\" \"npm run test:api:watch\"",
     "test:frontend": "cd property-search-frontend && npm test -- --watchAll=false",
+    "test:frontend:unit": "cd property-search-frontend && npm run test:unit",
+    "test:frontend:coverage": "cd property-search-frontend && npm run test:coverage",
+    "test:frontend:watch": "cd property-search-frontend && npm run test:watch",
+    "test:frontend:e2e": "cd e2e-tests && npm run test",
     "test:api": "cd property-search-api && npm test",
+    "test:api:unit": "cd property-search-api && npm run test",
+    "test:api:integration": "cd property-search-api && npm run test:integration",
+    "test:api:coverage": "cd property-search-api && npm run test:coverage",
+    "test:api:watch": "cd property-search-api && npm run test:watch",
     "test:ai": "cd property-embedding-service && python -m pytest",
     "test:import": "cd property-search-api && python test_flexible_import.py",
+    "test:tdd": "npm run test:tdd:frontend && npm run test:tdd:api",
+    "test:tdd:frontend": "cd property-search-frontend && npm run test:tdd",
+    "test:tdd:api": "cd property-search-api && npm run test:tdd",
+    "test:tdd:watch": "concurrently \"npm run test:tdd:frontend:watch\" \"npm run test:tdd:api:watch\"",
+    "test:tdd:frontend:watch": "cd property-search-frontend && npm run test:tdd:watch",
+    "test:tdd:api:watch": "cd property-search-api && npm run test:tdd:watch",
+    "test:semantic": "cd property-search-frontend && npm run test:semantic",
+    "test:components": "cd property-search-frontend && npm run test:components",
     "lint": "npm run lint:frontend && npm run lint:api && npm run lint:ai",
     "lint:frontend": "cd property-search-frontend && npm run lint",
     "lint:api": "cd property-search-api && npm run lint",
