--- a/property-search-api/package.json
+++ b/property-search-api/package.json
@@ -13,6 +13,12 @@
     "test:watch": "vitest watch",
     "test:env": "vitest run src/config/env.test.ts",
     "test:db-optimization": "vitest run src/__tests__/database/",
+    "test:tdd": "vitest run --reporter=verbose",
+    "test:tdd:watch": "vitest watch --reporter=verbose",
+    "test:tdd:coverage": "vitest run --coverage --reporter=verbose",
+    "test:integration": "vitest run --testNamePattern='integration'",
+    "test:unit": "vitest run --testNamePattern='(?!integration)'",
+    "test:semantic": "vitest run src/services/search/",
     "lint": "eslint src/**/*.ts",
     "migrate": "node -r tsx/cjs src/scripts/migrate.ts",
     "setup-db-optimization": "tsx scripts/setup-database-optimization.ts",
