--- a/property-search-api/.env.example
+++ b/property-search-api/.env.example
@@ -137,3 +137,33 @@ LOG_FILE=./logs/app.log
 
 # Health Check
 HEALTH_CHECK_ENABLED=true
+
+# ========================================
+# 🔍 Semantic Search Configuration
+# ========================================
+# Cache TTL in seconds (default: 300 = 5 minutes, max: 86400 = 24 hours)
+CACHE_TTL_SECONDS=300
+
+# Maximum number of search results to return (default: 50, max: 1000)
+SEARCH_RESULT_LIMIT=50
+
+# Maximum embedding dimensions (default: 1536, max: 4096)
+MAX_EMBEDDING_DIMENSIONS=1536
+
+# Similarity threshold for semantic search (default: 0.7, range: 0.0-1.0)
+SIMILARITY_THRESHOLD=0.7
+
+# Enable/disable result re-ranking (default: true)
+RERANKING_ENABLED=true
+
+# ========================================
+# 💾 Advanced Cache Configuration
+# ========================================
+# Default cache TTL for general caching (default: 300 seconds)
+DEFAULT_CACHE_TTL_SECONDS=300
+
+# Maximum cache key size in bytes (default: 1024, max: 10240)
+MAX_CACHE_KEY_SIZE=1024
+
+# Enable cache compression (default: false)
+CACHE_COMPRESSION_ENABLED=false
