--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,12 @@ pids/
 coverage/
 *.lcov
 
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
 # IDE files
 .vscode/
 .idea/
