--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test:unit": "npm run test:frontend:unit && npm run test:api:unit",
     "test:integration": "npm run test:api:integration",
     "test:e2e": "npm run test:frontend:e2e",
+    "test:e2e:docker": "bash scripts/test-e2e-docker.sh",
+    "test:e2e:docker:windows": "powershell -ExecutionPolicy Bypass -File scripts/test-e2e-docker.ps1",
     "test:coverage": "npm run test:frontend:coverage && npm run test:api:coverage",
     "test:watch": "concurrently \"npm run test:frontend:watch\" \"npm run test:api:watch\"",
     "test:frontend": "cd property-search-frontend && npm test -- --watchAll=false",
@@ -63,7 +65,9 @@
     "release": "npm run build && npm run test && git tag -a v$(npm version --json | jq -r '.version') -m 'Release v$(npm version --json | jq -r '.version')'",
     "deploy:staging": "echo 'Deploying to staging...' && npm run build && echo 'Staging deployment complete!'",
     "deploy:production": "echo 'Deploying to production...' && npm run build && echo 'Production deployment complete!'",
-    "health-check": "curl -f http://localhost:3000/api/health && curl -f http://localhost:3001/health && curl -f http://localhost:8001/health"
+    "health-check": "curl -f http://localhost:3000/api/health && curl -f http://localhost:3001/health && curl -f http://localhost:8001/health",
+    "validate:workflow": "node scripts/validate-workflow.js",
+    "validate:e2e": "npm run validate:workflow && echo 'E2E integration validation complete!'"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -73,6 +77,7 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
+    "js-yaml": "^4.1.0",
     "lint-staged": "^15.0.2",
     "postcss": "^8.5.6",
     "prettier": "^3.0.3",
