--- a/property-search-frontend/Dockerfile
+++ b/property-search-frontend/Dockerfile
@@ -1,6 +1,9 @@
 # Development/E2E Testing Dockerfile for Property Search Frontend
 FROM node:18-alpine
 
+# Install curl for health checks first
+RUN apk add --no-cache curl
+
 WORKDIR /app
 
 # Install dependencies
@@ -9,6 +12,10 @@ RUN npm ci
 
 # Copy source code
 COPY . .
+
+# Set environment variables for build
+ENV NODE_ENV=development
+ENV NEXT_TELEMETRY_DISABLED=1
 
 # Build the application
 RUN npm run build
@@ -19,9 +26,6 @@ EXPOSE 3000
 # Health check
 HEALTHCHECK --interval=10s --timeout=5s --start-period=30s --retries=3 \
     CMD curl -f http://localhost:3000 || exit 1
-
-# Install curl for health checks
-RUN apk add --no-cache curl
 
 # Start the application
 CMD ["npm", "start"]
