--- a/property-embedding-service/requirements.txt
+++ b/property-embedding-service/requirements.txt
@@ -9,6 +9,7 @@ transformers>=4.35.0
 scikit-learn>=1.3.2
 prometheus-client>=0.19.0
 python-multipart>=0.0.6
+psutil>=5.9.0
 
 # Enhanced caching dependencies
 xxhash>=3.4.1
