🔧 Fix PropertyPoolConfig and DatabaseConfig compatibility issues
✅ DEPENDENCY FIXES:
- Add missing dependencies: joi, bcrypt, isomorphic-dompurify, prom-client, sequelize
- Create proper .dockerignore file for API service
- Add baseUrl and paths configuration to tsconfig.json

🔧 DATABASE CONFIG FIXES:
- Add missing retryAttempts and retryDelay to all DatabaseService instantiations
- Fix all test files to use complete DatabaseConfig objects
- Update PropertyPoolManager configurations with required properties
- Fix integration examples and server configurations

📝 FILES UPDATED:
- property-search-api/package.json - Added missing dependencies
- property-search-api/.dockerignore - Created proper Docker ignore file
- property-search-api/tsconfig.json - Added path aliases
- All test files - Fixed DatabaseConfig objects
- server.enhanced.ts - Added missing config properties
- integration-example.ts - Fixed configuration

This resolves TypeScript compilation errors related to missing properties in PropertyPoolConfig and DatabaseConfig objects.

--- a/property-search-api/tsconfig.json
+++ b/property-search-api/tsconfig.json
@@ -24,6 +24,10 @@
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "moduleResolution": "node",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        },
         "allowJs": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
