--- a/property-search-api/package.json
+++ b/property-search-api/package.json
@@ -54,7 +54,12 @@
     "socket.io": "^4.7.0",
     "stripe": "^14.0.0",
     "winston": "^3.11.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "joi": "^17.9.2",
+    "bcrypt": "^5.1.0",
+    "isomorphic-dompurify": "^1.8.0",
+    "prom-client": "^14.2.0",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
     "@testcontainers/postgresql": "^11.0.3",
